# translators_lab2

./: CMakeLists.txt  test_file.txt
const_tables/: keywords.txt  operations.txt  splitters.txt
lib/: error_or_t.h  main.cpp  scanner.h
lib/tables/: const_table.h  variable_table.h
tests/: test_file_all_elements.txt  test_file_with_errors.txt
